--- a/web/ui/html/index.html
+++ b/web/ui/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GMQ 监控中心</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/ui/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -52,6 +52,6 @@
         </div>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script src="/ui/js/app.js"></script>
 </body>
 </html>
