--- a/web/ui/html/index.html
+++ b/web/ui/html/index.html
@@ -11,8 +11,7 @@
         <header>
             <h1>🚀 GMQ 消息队列监控中心</h1>
             <div class="header-controls">
-                <span class="last-update">最后更新: <span id="last-update">-</span></span>
-                <button class="refresh-btn" onclick="refreshMetrics()">🔄 刷新</button>
+                <span class="connection-status" id="connection-status">连接中...</span>
             </div>
         </header>
 
