--- a/statics/html/index.html
+++ b/statics/html/index.html
@@ -117,6 +117,23 @@
                 </div>
             </div>
         </div>
+
+        <!-- 自定义确认弹窗 -->
+        <div class="modal" id="confirm-modal">
+            <div class="modal-content confirm-modal-content">
+                <div class="modal-header">
+                    <h3 id="confirm-title">确认操作</h3>
+                    <button class="modal-close" onclick="closeConfirmModal()">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p id="confirm-message" class="confirm-message"></p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" onclick="closeConfirmModal()">取消</button>
+                    <button class="btn btn-danger" id="confirm-btn">确认</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="/ui/js/app.js"></script>
