--- a/statics/html/index.html
+++ b/statics/html/index.html
@@ -64,8 +64,44 @@
             </div>
         </div>
 
-        <div class="metrics-container" id="metrics-container">
-            <!-- 动态生成监控卡片 -->
+        <!-- MQ类型 TabList -->
+        <div class="mq-tablist" id="mq-tablist" role="tablist">
+            <button class="tab-item active" data-mq="rabbitmq" role="tab" aria-selected="true" onclick="switchMQTab('rabbitmq')">
+                <span class="tab-icon">🐰</span>
+                <span class="tab-label">RabbitMQ</span>
+            </button>
+            <button class="tab-item" data-mq="redis" role="tab" aria-selected="false" onclick="switchMQTab('redis')">
+                <span class="tab-icon">🔴</span>
+                <span class="tab-label">Redis Stream</span>
+            </button>
+            <button class="tab-item" data-mq="nats" role="tab" aria-selected="false" onclick="switchMQTab('nats')">
+                <span class="tab-icon">🚀</span>
+                <span class="tab-label">NATS</span>
+            </button>
+        </div>
+
+        <!-- TabPanels - 每个Tab对应一个MQ实例 -->
+        <div class="tab-panels" id="tab-panels">
+            <!-- RabbitMQ Panel -->
+            <div class="tab-panel active" data-panel="rabbitmq" role="tabpanel">
+                <div class="metrics-container single-metric" id="container-rabbitmq">
+                    <!-- 动态加载 RabbitMQ 监控卡片 -->
+                </div>
+            </div>
+            
+            <!-- Redis Panel -->
+            <div class="tab-panel" data-panel="redis" role="tabpanel" hidden>
+                <div class="metrics-container single-metric" id="container-redis">
+                    <!-- 动态加载 Redis 监控卡片 -->
+                </div>
+            </div>
+            
+            <!-- NATS Panel -->
+            <div class="tab-panel" data-panel="nats" role="tabpanel" hidden>
+                <div class="metrics-container single-metric" id="container-nats">
+                    <!-- 动态加载 NATS 监控卡片 -->
+                </div>
+            </div>
         </div>
 
         <!-- 死信队列模态框 -->
