--- a/statics/html/index.html
+++ b/statics/html/index.html
@@ -170,6 +170,25 @@
                 </div>
             </div>
         </div>
+
+        <!-- 死信原因详情模态框 -->
+        <div class="modal" id="dead-reason-detail-modal">
+            <div class="modal-content confirm-modal-content">
+                <div class="modal-header">
+                    <h3>⚠️ 异常详细信息</h3>
+                    <button class="modal-close" onclick="closeDeadReasonDetailModal()">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label>异常描述</label>
+                        <textarea id="dead-reason-detail-content" class="form-textarea" rows="10" readonly></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" onclick="closeDeadReasonDetailModal()">关闭</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="/ui/js/app.js"></script>
